# verifact

./: .env  .gitignore  CITATION.cff  LICENSE  README.md  docker-compose.yml  pyproject.toml
scripts/: README.md
scripts/analysis/: 1_proposition_validity.py  2_interrater_between_human_clinicians.py  3_verifact_vs_ground_truth_tables.py  4_verifact_vs_ground_truth_label_distributions.py  5_verifact_vs_ground_truth_sensitivity_analysis.py  6_verifact_weak_to_strong_trajectory.py  README.md
scripts/analysis_dataset/: 1_proposition_validity.py  README.md
scripts/analysis_interrater/: 1_compute_interrater_agreement.py  2_interrater_agreement_tables.py  README.md
scripts/analysis_verifact/: 0_check_completeness.py  1_verifact_BHC_dataset_statistics.py  2_compute_verifact_agreement.py  3_sensitivity_analysis_plots.py  4_top_n_vs_reference_context_length.py  5_best_model_sens_spec_ppv_npv.py  6_metric_result_tables.py  7_error_analysis.py  8_score_sheet_figure.py  README.md
scripts/dataset/: README.md  decompose_text.py  run_verifact.py  sample_mimic_dataset.py  write_llm_hospital_course.py
scripts/evaluate/: README.md  run_verifact.py  run_verifact2.py  score_report.pkl
services/: README.md
services/embed/: Dockerfile  README.md
services/embed/infinity_patch/fastapi_schemas/: pymodels.py
services/embed/infinity_patch/transformer/embedder/: sentence_transformer.py
services/embed/tests/: embedding_speed_test.py  embedding_test.py
services/rerank/: Dockerfile  README.md
services/rerank/infinity_patch/transformer/crossencoder/: torch.py
services/rerank/tests/: rerank_speed_test.py  rerank_test.py
services/vllm/monitoring/: README.md  grafana.json  prometheus.yml
services/vllm/tests/: aux_llm_context_window_test.py  llm_context_window_test.py  lorem_ipsum.txt
